# freertos_task_notification

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  freertos_hooks.c  main.c
